# riff

./: .gitignore  CLAUDE.md  LICENCE  README.md
.claude/skills/riff-setup/references/: setup-guide.md
riff/: Makefile  README.md  co.remotehumans.riff.plist  config.default.json  riff-hook.sh
riff-bridge/: .gitignore  Makefile  README.md  co.remotehumans.riff-bridge.plist  jx11-bridge  riff_bridge.swift
riff-voice/: .gitignore  Makefile  README.md  co.remotehumans.riff-voice.plist  pyproject.toml  riff-architecture.md  riff-hook-processor.py  riff-hook.sh
riff-voice/RiffBar/: DaemonConnection.swift  PopoverView.swift  RiffBarApp.swift  SettingsView.swift  build.sh
riff-voice/RiffBar/_CodeSignature/: CodeResources
riff-voice/src/riff/: config.py  daemon.py
riff/RiffBar/: .gitignore  DaemonConnection.swift  Info.plist  PopoverView.swift  RiffBarApp.swift  SessionRow.swift  build.sh  co.remotehumans.riff-bar.plist
riff/RiffBar/_CodeSignature/: CodeResources
riff/src/riff/: __init__.py  cli.py  config.py  daemon.py
ring-bridge/: .gitignore  AUDIT.md  Makefile  README.md  co.remotehumans.jx11-bridge.plist  jx11_bridge.swift
skills/riff-setup/: SKILL.md
